// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local/server/start/handleAppListen should log (NODE_ENV foo) 1`] = `
Array [
  Array [
    "console.log",
    Array [
      "Node dev server: listening on port 'PORT'",
    ],
  ],
]
`;

exports[`local/server/start/handleAppListen should log (NODE_ENV production) 1`] = `
Array [
  Array [
    "console.log",
    Array [
      "Node cluster worker 'process.pid': listening on port 'PORT'",
    ],
  ],
]
`;
